# fpl-analytics

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: README.md  cache.py  fetch_api.py  load_csv.py
data/.cache/: metadata.json
test_cache/: metadata.json
test_cache2/: metadata.json
utils/: README.md  charts.py  filters.py
