[project]
name = "fpl-analytics"
version = "0.1.0"
description = "A comprehensive Fantasy Premier League analytics webapp built with Streamlit"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "plotly>=5.18.0",
    "altair>=5.1.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.7.0",
]

[tool.uv]
